# wxKepper30

./: .clang-format  CMakeLists.txt  converter.cpp  custom_dialogs.cpp  custom_dialogs.h  domain.h  logic.cpp  logic.h  main.cpp  mainframe.cpp  mainframe.h  readme.md  resources.rc  utils.cpp  utils.h  wxLogic.cpp  wxLogic.h
.github/workflows/: cmake.yml
converter/: CMakeLists.txt  converter.cpp
docs/: _config.yml  index.html
screenshots/: readme.md
